# ai-podcast-creator

./: -y  .codecov.yml  .coveragerc  .cursorignore  .gitignore  .mutmut-cache  .pre-commit-config.yaml  AI_GENERATED_HUMAN_AVATARS.md  ANIMATED_AVATARS_GUIDE.md  ARCHITECTURE.md  AUDIO_ONLY_GUIDE.md  AUDIO_VIDEO_QUICK_REF.md  AUTOMATED_QA_COMPLETE.md  AUTO_UPDATE_PRS_GUIDE.md  AVATAR_COMPLETE.md  AVATAR_GUIDE.md  AVATAR_QUICKSTART.md  AVATAR_READY.md  AVATAR_SETUP_GUIDE.md  BUGS_FOUND_AND_FIXED.md  CACHE_MANAGEMENT.md  CACHE_QUICK_REF.md  CHECKSUMS_cursor_test_review.sha256  CI_CD_COMPLETE.md  CI_CD_SETUP_GUIDE.md  CI_DEBUG_GUIDE.md  CI_ERRORS_FIXED.md  CI_ERROR_FIX_PR39.md  CI_FIXES_SUMMARY.md  CI_FIXES_SUMMARY_FINAL.md  CI_FIX_SUMMARY.md  CI_LOCAL_MISMATCH_ANALYSIS.md  CI_SUCCESS_SUMMARY.md  CI_VERSION_FIX.md  CLEANUP_COMPLETE.md  CLEANUP_KITCHEN.md  CLEANUP_SUMMARY.md  CODE_CLEANUP_SUMMARY.md  COMMIT_MESSAGE.txt  COMPLETE_DEMO_PACKAGE.md  (+232 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.venv312/: pyvenv.cfg
ADL/: 00_DECISION_TEMPLATE.md  00_HISTORICAL_DECISIONS.md  00_NEXT_ITERATION_PLAN.md  01_DECISION_AUDIO_EFFECTS.md  02_DECISION_BACKWARD_COMPATIBILITY.md  03_DECISION_TIMING_PRECISION.md  04_DECISION_PAUSE_IMPLEMENTATION.md  DECISION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md
Creations/: Dean test script.txt  README.md  example_educational.txt  example_storytelling.txt  template_blank.txt
data/: .gitkeep
docker/: MutmutGpu.Dockerfile
docs/: ai-readme.md
scripts/: EVALUATION_TESTS_README.md  README_WAVEFORM_TESTS.md  auto_update_prs.ps1  batch_merge_dependabot.ps1  check-gpu-deps.ps1  check_ci_locally.ps1  check_pr_ci_status.ps1  cleanup_merged_branches.ps1  create_feature_branch.ps1  create_pr_branch.ps1  download_ci_logs.sh  enable_auto_merge_prs.ps1  ensure-gpu-tests-run.ps1  extract_ci_errors.py  fetch_ci_errors.py  fetch_failed_ci_logs.py  generate-badges.ps1  generate_coverage_report.py  generate_waveform_only.py  generate_waveform_tests.py  get_actual_ci_errors.py  get_ci_error_details.py  get_ci_log_output.py  get_ci_logs.py  get_ci_logs_direct.py  get_latest_ci_run.py  get_mutation_score.py  git-alias-setup.ps1  lint.ps1  monitor_and_merge_prs.ps1  mutmut_pytest_wrapper.py  pre-push.ps1  qa_waveform_tests.py  run_evaluation_tests.py  run_mutmut.ps1  run_mutmut_docker.ps1  run_mutmut_fast.ps1  run_tests_batched.py  run_tests_gpu_batched.py  run_tests_gpu_streaming.ps1  (+11 more)
tests/: __init__.py  conftest.py  factories.py  test_script_parser.py
(+298 files in other folders)
